# thorvald_simulation

./: robot_bringup_vignesh.launch
Thorvald_Navigation-master/: README.md
Thorvald_Navigation-master/testbot_description/: CMakeLists.txt  package.xml
Thorvald_Navigation-master/testbot_description/launch/: gazebo_thorvald.launch
Thorvald_Navigation-master/testbot_description/urdf/: plugin_add.world  sensor_rig_frame.gv  thorvald_ii.gazebo  thorvald_laser.world
four_wheel_drive_gazebo_plugin/: CMakeLists.txt  controller_plugins.xml  package.xml
four_wheel_drive_gazebo_plugin/include/four_wheel_drive_gazebo_plugin/: dummy.h  four_wheel_drive_controller.h  four_wheel_drive_gazebo_plugin.h
four_wheel_drive_gazebo_plugin/src/: dummy.cpp  four_wheel_drive_controller.cpp  four_wheel_drive_gazebo_plugin.cpp  model_push.cpp
testbot_description/: CMakeLists.txt  package.xml  thorvald.world  thorvald_phenotyping.world
testbot_description/launch/: all_sensors.launch  gazebo_phenotyping.launch  gazebo_thorvald.launch  test_localization.launch
testbot_description/urdf/: model.urdf  sylling.world  thorvald.world  thorvald_ii.gazebo  thorvald_ii.xacro  thorvald_laser.world  thorvald_phenotyping.gazebo  thorvald_phenotyping.xacro
thorvald_simulation/four_wheel_drive_gazebo_plugin/: CMakeLists.txt  package.xml
thorvald_simulation/four_wheel_drive_gazebo_plugin/config/: four_wheel_drive_control.yaml
thorvald_simulation/four_wheel_drive_gazebo_plugin/include/four_wheel_drive_gazebo_plugin/: four_wheel_drive_gazebo_plugin.h
thorvald_simulation/four_wheel_drive_gazebo_plugin/launch/: hello.launch
thorvald_simulation/four_wheel_drive_gazebo_plugin/src/: four_wheel_drive_gazebo_plugin.cpp
thorvald_simulation/four_wheel_drive_gazebo_plugin/worlds/: hello.world
thorvald_simulation/testbot_description/: sylling.world  sylling_complete_thorvald_ii.world  thorvald_phenotyping.world
thorvald_simulation/testbot_description/launch/: gazebo_phenotyping.launch  gazebo_thorvald.launch  real_time.launch  test_good.launch  urdf.launch  velodyne_node.launch
thorvald_simulation/testbot_description/src/: parser.cpp
thorvald_simulation/testbot_description/urdf/: sensor_rig.urdf  sylling_complete_thorvald_ii.world  thorvald_ii.gazebo  thorvald_ii.xacro  thorvald_phenotyping.gazebo  thorvald_phenotyping.xacro  vollebekk.world  vollebekk_grass.world  vollebekk_grass_thorvald.world  vollebekk_new.world
twist_converter/: CMakeLists.txt  package.xml
twist_converter/src/: twist_converter_node.cpp
