<?xml version="1.0"?>
<package>
  <name>four_wheel_drive_gazebo_plugin</name>
  <version>0.0.0</version>
  <description>The four_wheel_drive_gazebo_plugin package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="vigneshnuc@todo.todo">vigneshnuc</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/four_wheel_drive_gazebo_plugin</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>base_drive_chain</build_depend>
  <!--<build_depend>thorvald_ii_control</build_depend>
  <build_depend>ignition-math2</build_depend>
  <run_depend>ignition-math2</run_depend>  
  <run_depend>thorvald_ii_control</run_depend>-->
  <run_depend>base_drive_chain</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>


<export>

<gazebo_ros gazebo_plugin_path="/home/vigneshnuc/catkin_ws/devel/lib"/>

<!--GAZEBO_PLUGIN_PATH=$HOME/four_wheel_drive_gazebo_plugin/build:$GAZEBO_PLUGIN_PATH-->

<!-- Other tools can request additional information be placed here -->
<!--gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" /-->

</export>

</package>
